@@ -175,6 +175,32 @@ AC_ARG_ENABLE([bt-movement-modes],
     ]
 )
 
+AC_MSG_CHECKING([Should we scale BTH on infrared with increasing heat? [[default=yes]]])
+AC_ARG_ENABLE([bt-scaled-infrared],
+    AS_HELP_STRING([--disable-bt-scaled-infrared],
+                   [Disable scaled infrared [[default=enabled]]])
+    AS_HELP_STRING([ ], [ ]),
+    [
+        case "${enableval}" in
+            yes)
+                AC_DEFINE([BT_MOVEMENT_MODES], [1], [Should heat-scaled infrared be enabled])
+                AC_MSG_RESULT([yes])
+                ;;
+            no)
+                AC_MSG_RESULT([no])
+                ;;
+            *)
+                AC_MSG_ERROR(bad value "${enableval}" for bt-scaled-infrared option)
+                ;;
+        esac
+    ],
+    [
+        AC_MSG_RESULT([yes])
+        AC_DEFINE([BT_SCALED_INFRARED], [1], [Should heat-scaled infrared be enabled])
+    ]
+)
+
+
 AC_MSG_CHECKING([Should we copy freqs to MW on disembark [[default=yes]]])
 AC_ARG_ENABLE([bt-mwfreqs],
     AS_HELP_STRING([--disable-bt-mwfreqs],
